syntax = "proto3";

package api.task.v1;

option go_package = "galileo/api/task/v1;v1";
option java_multiple_files = true;
option java_package = "api.task.v1";

service Task {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskReply);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskReply);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskReply);
  rpc GetTask (GetTaskRequest) returns (GetTaskReply);
  rpc ListTask (ListTaskRequest) returns (ListTaskReply);
}

message CreateTaskRequest {
  string name = 1;
  int32 rank = 2;
  int32 type = 3;
  string description = 4;
  string url = 5;
}
message CreateTaskReply {
  bool success = 1;
  int64 id = 2;
  int32 status = 3;
  int64 createdAt = 4;
}

message UpdateTaskRequest {}
message UpdateTaskReply {}

message DeleteTaskRequest {}
message DeleteTaskReply {}

message GetTaskRequest {}
message GetTaskReply {}

message ListTaskRequest {}
message ListTaskReply {}